--- a/AUTHORS
+++ b/AUTHORS
@@ -23,3 +23,4 @@ Gabriel Luong <gabriel.luong@gmail.com>
 Alex Rudenko <alexei.rudenko@gmail.com>
 Ankit Mishra <ankit.mishra131990@gmail.com>
 Julian Geppert <spctstr@gmail.com>
+François Beaufort <beaufort.francois@gmail.com>
