--- a/AUTHORS
+++ b/AUTHORS
@@ -33,3 +33,4 @@ Anna Agoha <annaagoha@gmail.com>
 Karntino Areros <karntino.c.areros@gmail.com>
 Luke Swiderski <luke.swiderski@gmail.com>
 Anthony Xie <anthonyxie64@gmail.com>
+Krishnal Ciccolella <ciccolella.krishnal@gmail.com>
