[Recorder] Add recording to DevTools
Change-Id: I58a5add98bf08a8113ecdf674e08911a79f7b12b

--- a/front_end/i18n/locales/en-US.json
+++ b/front_end/i18n/locales/en-US.json
@@ -1,4 +1,7 @@
 {
+  "recorder/RecordingFileSystem.js | defaultRecordingName": {
+    "message": "Recording #{nextId}"
+  },
   "settings/FrameworkBlackboxSettingsTab.js | addFilenamePattern": {
     "message": "Add filename pattern"
   },
