Show pretty-printed files regardless of 'Search in anonymous and content scripts' option when using multi-file search
Previous behavior:
Pretty-printed files were excluded from multi-file search when
the 'Search in anonymous and content scripts' was disabled.

After fix:
Pretty-printed files are included in search regardless of the option

Bug: 1138109
Change-Id: I17c621b426b3652cab2f373d13304328a5029b0b

--- a/AUTHORS
+++ b/AUTHORS
@@ -36,3 +36,4 @@ Anthony Xie <anthonyxie64@gmail.com>
 Krishnal Ciccolella <ciccolella.krishnal@gmail.com>
 Will Hernandez‬ <w.hernandez.code@gmail.com>
 Danny Eldridge <me@heardanieljames.com>
+Derek Li <the.derekli@gmail.com>
