[Recorder] Add recording to DevTools
Bug: chromium:1144127
Change-Id: I58a5add98bf08a8113ecdf674e08911a79f7b12b

--- a/front_end/i18n/locales/en-US.json
+++ b/front_end/i18n/locales/en-US.json
@@ -124,6 +124,8 @@
   },
   "coverage/ModuleUIStrings.js | stopInstrumentingCoverageAndShow": {
     "message": "Stop instrumenting coverage and show results"
+  "recorder/RecordingFileSystem.js | defaultRecordingName": {
+    "message": "Recording #{nextId}"
   },
   "settings/FrameworkBlackboxSettingsTab.js | addFilenamePattern": {
     "message": "Add filename pattern"
