DevTools: Allow users to override storage quota size.
This patch adds an interface at DevTools>Application to allow users to
override the quota size for the current origin. At the backend, the
QuotaManager maintains a map from origins to emulated quota size.

Corresponding Chromium CL: https://crrev.com/c/2122473
Doc: https://docs.google.com/document/d/1gSZRjwgz4T0Dl8GSrN8BTFKVvw8-dCehIQOJsBVsOgc/edit#
Bug:945786
Change-Id: I2d19d7b749ebec26202039f29477145299904a41

--- a/front_end/i18n/locales/en-US.json
+++ b/front_end/i18n/locales/en-US.json
@@ -125,6 +125,15 @@
   "coverage/ModuleUIStrings.js | stopInstrumentingCoverageAndShow": {
     "message": "Stop instrumenting coverage and show results"
   },
+  "resources/ClearStorageView.js | storageQuotaUsed": {
+    "message": "{PH1} used out of {PH2} storage quota"
+  },
+  "resources/ClearStorageView.js | storageQuotaUsedWithBytes": {
+    "message": "{PH1} bytes used out of {PH2} bytes storage quota"
+  },
+  "resources/ClearStorageView.js | storageWithCustomMarker": {
+    "message": "{PH1} (custom)"
+  },
   "settings/FrameworkBlackboxSettingsTab.js | addFilenamePattern": {
     "message": "Add filename pattern"
   },
