--- a/front_end/i18n/locales/en-US.json
+++ b/front_end/i18n/locales/en-US.json
@@ -125,6 +125,9 @@
   "coverage/ModuleUIStrings.js | stopInstrumentingCoverageAndShow": {
     "message": "Stop instrumenting coverage and show results"
   },
+  "recorder/RecordingFileSystem.js | defaultRecordingName": {
+    "message": "Recording #{nextId}"
+  },
   "resources/ClearStorageView.js | storageQuotaUsed": {
     "message": "{PH1} used out of {PH2} storage quota"
   },
