Connect warnings to developer resources
Bug: none
Change-Id: I4033015c856180d435b35abaffff1789879c78cc

--- a/front_end/core/i18n/locales/en-US.json
+++ b/front_end/core/i18n/locales/en-US.json
@@ -101,6 +101,9 @@
   "core/common/Revealer.ts | changesDrawer": {
     "message": "Changes drawer"
   },
+  "core/common/Revealer.ts | developerResourcesDrawer": {
+    "message": "Developer resources drawer"
+  },
   "core/common/Revealer.ts | elementsPanel": {
     "message": "Elements panel"
   },
@@ -9532,6 +9535,9 @@
   },
   "panels/sources/DebuggerPlugin.ts | enableBreakpoint": {
     "message": "{n, plural, =1 {Enable breakpoint} other {Enable all breakpoints in line}}"
+  },
+  "panels/sources/DebuggerPlugin.ts | gotoRequest": {
+    "message": "(See request)"
   },
   "panels/sources/DebuggerPlugin.ts | neverPauseHere": {
     "message": "Never pause here"
