Network Timing: Drop 'TTFB' from Waiting timing label
The timing here isn't congruent with the TTFB metric

Bug: 1192230
Change-Id: Ic305f06d981eab531b506dede6a7da8b875864cc

--- a/front_end/core/i18n/locales/en-US.json
+++ b/front_end/core/i18n/locales/en-US.json
@@ -7479,7 +7479,7 @@
     "message": "Unknown"
   },
   "panels/network/RequestTimingView.ts | waitingTtfb": {
-    "message": "Waiting (TTFB)"
+    "message": "Waiting for server response"
   },
   "panels/network/RequestTimingView.ts | waterfall": {
     "message": "Waterfall"
