--- a/front_end/core/i18n/locales/en-XL.json
+++ b/front_end/core/i18n/locales/en-XL.json
@@ -6311,8 +6311,17 @@
   "panels/mobile_throttling/ThrottlingManager.ts | dSlowdown": {
     "message": "{PH1}× ŝĺôẃd̂óŵń"
   },
+  "panels/mobile_throttling/ThrottlingManager.ts | excessConcurrency": {
+    "message": "Êx́ĉéêd́îńĝ t́ĥé d̂éf̂áûĺt̂ v́âĺûé m̂áŷ d́êǵr̂ád̂é ŝýŝt́êḿ p̂ér̂f́ôŕm̂án̂ćê."
+  },
   "panels/mobile_throttling/ThrottlingManager.ts | forceDisconnectedFromNetwork": {
     "message": "F̂ór̂ćê d́îśĉón̂ńêćt̂éd̂ f́r̂óm̂ ńêt́ŵór̂ḱ"
+  },
+  "panels/mobile_throttling/ThrottlingManager.ts | hardwareConcurrency": {
+    "message": "Ĥár̂d́ŵár̂é ĉón̂ćûŕr̂én̂ćŷ"
+  },
+  "panels/mobile_throttling/ThrottlingManager.ts | hardwareConcurrencyIsEnabled": {
+    "message": "Ĥár̂d́ŵár̂é ĉón̂ćûŕr̂én̂ćŷ óv̂ér̂ŕîd́ê íŝ én̂áb̂ĺêd́"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | noThrottling": {
     "message": "N̂ó t̂h́r̂ót̂t́l̂ín̂ǵ"
