--- a/front_end/core/i18n/locales/en-XL.json
+++ b/front_end/core/i18n/locales/en-XL.json
@@ -7922,6 +7922,9 @@
   "panels/profiler/HeapSnapshotView.ts | containment": {
     "message": "Ĉón̂t́âín̂ḿêńt̂"
   },
+  "panels/profiler/HeapSnapshotView.ts | exposeInternals": {
+    "message": "Êx́p̂óŝé îńt̂ér̂ńâĺŝ (ćĥéĉḱîńĝ t́ĥíŝ éx̂ṕôśêś îńt̂ér̂ńâĺ n̂ód̂éŝ án̂d́ îńt̂ŕôd́ûćêś êx́ĉéŝśîv́ê d́êt́âíl̂, b́ût́ m̂íĝh́t̂ h́êĺp̂ d́êb́ûǵĝín̂ǵ ĉýĉĺêś îń r̂ét̂áîńîńĝ ṕât́ĥś)"
+  },
   "panels/profiler/HeapSnapshotView.ts | filter": {
     "message": "F̂íl̂t́êŕ"
   },
@@ -8008,9 +8011,6 @@
   },
   "panels/profiler/HeapSnapshotView.ts | takeHeapSnapshot": {
     "message": "T̂ák̂é ĥéâṕ ŝńâṕŝh́ôt́"
-  },
-  "panels/profiler/HeapSnapshotView.ts | treatGlobalObjectsAsRoots": {
-    "message": "T̂ŕêát̂ ǵl̂ób̂ál̂ ób̂j́êćt̂ś âś r̂óôt́ŝ (ŕêćôḿm̂én̂d́êd́, ûńĉh́êćk̂ín̂ǵ t̂h́îś êx́p̂óŝéŝ ín̂t́êŕn̂ál̂ ńôd́êś âńd̂ ín̂t́r̂ód̂úĉéŝ éx̂ćêśŝív̂é d̂ét̂áîĺ, b̂út̂ ḿîǵĥt́ ĥél̂ṕ d̂éb̂úĝǵîńĝ ćŷćl̂éŝ ín̂ ŕêt́âín̂ín̂ǵ p̂át̂h́ŝ)"
   },
   "panels/profiler/HeapSnapshotView.ts | typedArrays": {
     "message": "T̂ýp̂éd̂ ár̂ŕâýŝ"
