added slot field
DISABLE_THIRD_PARTY_CHECK=need updated cdp for slots


added slot

Bug: none
Change-Id: I0913441c86ed5c2f89dbb8cac274f771896c7e73

--- a/front_end/core/i18n/locales/en-US.json
+++ b/front_end/core/i18n/locales/en-US.json
@@ -4736,6 +4736,9 @@
   "panels/elements/ElementsTreeElement.ts | paste": {
     "message": "Paste"
   },
+  "panels/elements/ElementsTreeElement.ts | revealSlot": {
+    "message": "Reveal Slot"
+  },
   "panels/elements/ElementsTreeElement.ts | scrollIntoView": {
     "message": "Scroll into view"
   },
