Prerendering status UI
Demo: https://imgur.com/a/1IQorbE

Bug: 1249776
Change-Id: Id3b37f3c5c031b4872170b993ddacdd1e3bfd1fb

--- a/front_end/core/i18n/locales/en-US.json
+++ b/front_end/core/i18n/locales/en-US.json
@@ -3068,6 +3068,9 @@
   "panels/application/components/FrameDetailsView.ts | parentIsAdExplanation": {
     "message": "This frame is considered an ad frame because its parent frame is an ad frame."
   },
+  "panels/application/components/FrameDetailsView.ts | prerenderingStatus": {
+    "message": "Prerendering Status"
+  },
   "panels/application/components/FrameDetailsView.ts | refresh": {
     "message": "Refresh"
   },
