--- a/front_end/core/i18n/locales/en-XL.json
+++ b/front_end/core/i18n/locales/en-XL.json
@@ -3797,8 +3797,8 @@
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | sBreakpointHit": {
     "message": "{PH1} b̂ŕêák̂ṕôín̂t́ ĥít̂"
   },
-  "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | sS": {
-    "message": "{PH1}: {PH2}"
+  "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | sSS": {
+    "message": "{PH1}: {PH2}, {PH3}"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | subtreeModified": {
     "message": "Ŝúb̂t́r̂éê ḿôd́îf́îéd̂"
