[A11y] Fix DOMBreakpoint sidebar not announcing the check state
Screen Reader is not announcing the checkbox state in DOMbp sidebar. This is because the aria label is set at the checkbox element, however, the focusable element is its parent element. Now move the aria-label to it's parent so when the bp item get focused, the checkbox state will be announced.

Bug:1327440
Change-Id: I94fd9d3e0b93377f684fea6b5d384c944e29dc3d

--- a/front_end/core/i18n/locales/en-US.json
+++ b/front_end/core/i18n/locales/en-US.json
@@ -3773,8 +3773,11 @@
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | breakpointSet": {
     "message": "Breakpoint set"
   },
-  "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | checked": {
-    "message": "checked"
+  "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | cChecked": {
+    "message": "checkbox checked"
+  },
+  "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | cUnchecked": {
+    "message": "checkbox unchecked"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | domBreakpointsList": {
     "message": "DOM Breakpoints list"
@@ -3797,14 +3800,11 @@
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | sBreakpointHit": {
     "message": "{PH1} breakpoint hit"
   },
-  "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | sS": {
-    "message": "{PH1}: {PH2}"
+  "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | sSS": {
+    "message": "{PH1}: {PH2}, {PH3}"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | subtreeModified": {
     "message": "Subtree modified"
-  },
-  "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | unchecked": {
-    "message": "unchecked"
   },
   "panels/browser_debugger/ObjectEventListenersSidebarPane.ts | refreshGlobalListeners": {
     "message": "Refresh global listeners"
