--- a/front_end/core/i18n/locales/en-XL.json
+++ b/front_end/core/i18n/locales/en-XL.json
@@ -3773,8 +3773,11 @@
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | breakpointSet": {
     "message": "B̂ŕêák̂ṕôín̂t́ ŝét̂"
   },
-  "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | checked": {
-    "message": "ĉh́êćk̂éd̂"
+  "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | cChecked": {
+    "message": "ĉh́êćk̂b́ôx́ ĉh́êćk̂éd̂"
+  },
+  "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | cUnchecked": {
+    "message": "ĉh́êćk̂b́ôx́ ûńĉh́êćk̂éd̂"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | domBreakpointsList": {
     "message": "D̂ÓM̂ B́r̂éâḱp̂óîńt̂ś l̂íŝt́"
@@ -3797,14 +3800,11 @@
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | sBreakpointHit": {
     "message": "{PH1} b̂ŕêák̂ṕôín̂t́ ĥít̂"
   },
-  "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | sS": {
-    "message": "{PH1}: {PH2}"
+  "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | sSS": {
+    "message": "{PH1}: {PH2}, {PH3}"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | subtreeModified": {
     "message": "Ŝúb̂t́r̂éê ḿôd́îf́îéd̂"
-  },
-  "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | unchecked": {
-    "message": "ûńĉh́êćk̂éd̂"
   },
   "panels/browser_debugger/ObjectEventListenersSidebarPane.ts | refreshGlobalListeners": {
     "message": "R̂éf̂ŕêśĥ ǵl̂ób̂ál̂ ĺîśt̂én̂ér̂ś"
