--- a/front_end/core/i18n/locales/en-XL.json
+++ b/front_end/core/i18n/locales/en-XL.json
@@ -6620,14 +6620,26 @@
   "panels/network/components/RequestHeadersView.ts | remoteAddress": {
     "message": "R̂ém̂ót̂é Âd́d̂ŕêśŝ"
   },
+  "panels/network/components/RequestHeadersView.ts | requestHeaders": {
+    "message": "R̂éq̂úêśt̂ H́êád̂ér̂ś"
+  },
   "panels/network/components/RequestHeadersView.ts | requestMethod": {
     "message": "R̂éq̂úêśt̂ Ḿêt́ĥód̂"
   },
   "panels/network/components/RequestHeadersView.ts | requestUrl": {
     "message": "R̂éq̂úêśt̂ ÚR̂Ĺ"
   },
+  "panels/network/components/RequestHeadersView.ts | responseHeaders": {
+    "message": "R̂éŝṕôńŝé Ĥéâd́êŕŝ"
+  },
   "panels/network/components/RequestHeadersView.ts | statusCode": {
     "message": "Ŝt́ât́ûś Ĉód̂é"
+  },
+  "panels/network/components/RequestHeadersView.ts | viewParsed": {
+    "message": "V̂íêẃ p̂ár̂śêd́"
+  },
+  "panels/network/components/RequestHeadersView.ts | viewSource": {
+    "message": "V̂íêẃ ŝóûŕĉé"
   },
   "panels/network/components/RequestTrustTokensView.ts | aClientprovidedArgumentWas": {
     "message": "Â ćl̂íêńt̂-ṕr̂óv̂íd̂éd̂ ár̂ǵûḿêńt̂ ẃâś m̂ál̂f́ôŕm̂éd̂ ór̂ ót̂h́êŕŵíŝé îńv̂ál̂íd̂."
