--- a/front_end/core/i18n/locales/en-US.json
+++ b/front_end/core/i18n/locales/en-US.json
@@ -6755,6 +6755,9 @@
   "panels/network/NetworkItemView.ts | eventstream": {
     "message": "EventStream"
   },
+  "panels/network/NetworkItemView.ts | extensions": {
+    "message": "Extensions"
+  },
   "panels/network/NetworkItemView.ts | headers": {
     "message": "Headers"
   },
@@ -6775,6 +6778,9 @@
   },
   "panels/network/NetworkItemView.ts | requestAndResponseCookies": {
     "message": "Request and response cookies"
+  },
+  "panels/network/NetworkItemView.ts | requestAndResponseExtensions": {
+    "message": "Request and response extensions"
   },
   "panels/network/NetworkItemView.ts | requestAndResponseTimeline": {
     "message": "Request and response timeline"
