--- a/front_end/core/i18n/locales/en-US.json
+++ b/front_end/core/i18n/locales/en-US.json
@@ -6647,6 +6647,9 @@
   "panels/network/components/RequestHeadersView.ts | responseHeaders": {
     "message": "Response Headers"
   },
+  "panels/network/components/RequestHeadersView.ts | showMore": {
+    "message": "Show more"
+  },
   "panels/network/components/RequestHeadersView.ts | statusCode": {
     "message": "Status Code"
   },
